samples/_failures_safe/1761509798_a2b220_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3f0d55b.c: In function ‘main’:
./samples/SAFE/__tmp_b3f0d55b.c:150:12: error: missing terminating " character
  150 |     printf("Dijkstra
      |            ^~~~~~~~~
./samples/SAFE/__tmp_b3f0d55b.c:150:5: error: expected expression at end of input
  150 |     printf("Dijkstra
      |     ^~~~~~
./samples/SAFE/__tmp_b3f0d55b.c:150:5: error: expected declaration or statement at end of input
